samples/_failures_safe/1761523031_cba7b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b0a2325b.c: In function ‘read_input_data’:
./samples/SAFE/__tmp_b0a2325b.c:195:15: error: expected ‘;’ at end of input
  195 |         packet
      |               ^
      |               ;
./samples/SAFE/__tmp_b0a2325b.c:195:9: error: expected declaration or statement at end of input
  195 |         packet
      |         ^~~~~~
./samples/SAFE/__tmp_b0a2325b.c:195:9: error: expected declaration or statement at end of input
